<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantallas.MainActivity">

    <Button
        android:id="@+id/buttonReadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_leer_archivo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/buttonForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_abrir_formulario"
        android:layout_below="@id/buttonReadFile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/buttonVisor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_visor_por_provincias"
        android:layout_below="@id/buttonForm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/buttonGestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_gestion_datos"
        android:layout_below="@id/buttonVisor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>